--- a/index.html
+++ b/index.html
@@ -179,10 +179,10 @@
                     <h3>Follow Us</h3>
                     <hr>
                     <ul>
-                        <li>Facebook</li>
-                        <li>Twitter</li>
-                        <li>Instagram</li>
-                        <li>YouTube</li>
+                        <li><a href="" target="_blank">Facebook</a></li>
+                        <li><a href="" target="_blank">Twitter</a></li>
+                        <li><a href="https://www.instagram.com/krishnendu_roy52/" target="_blank">Instagram</a></li>
+                        <li><a href="https://www.youtube.com/channel/UCCA6-f8AFyjr-YDcM2077mg" target="_blank">YouTube</a></li>
                     </ul>
                 </div>
             </div>
