--- a/c-programming.html
+++ b/c-programming.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Code | Here</title>
-    <link rel="stylesheet" href="css/style.css">
+    <title>C Programming CodeHere</title>
+    <link rel="stylesheet" href="css/c-programming.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
@@ -34,9 +34,9 @@
     <section class="nav-bar">
         <div class="row">
             <div class="col-2">
-                <h1>First, solve the problem. Then, write the code.</h1>
-                <p>First learn computer science and all the theory. Next develop a programming style. Then forget
-                    all that and just hack.</p>
+                <h1>Wellcome to C-Programming</h1>
+                <p>Programming isn't about what you know; it's about what you can figure out.<br>Let's Learn c
+                    programming </p>
                 <a href="" class="btn">Exolore Now &#8594;</a>
             </div>
             <div class="col-2">
@@ -44,50 +44,23 @@
             </div>
         </div>
     </section>
-
-    <!-- ---------fectured Catagories------------->
-    <div class="catagories">
-        <div class="small-container">
-            <h1 class="title">Fectured Image</h1>
-            <div class="row">
-                <div class="col-3">
-                    <img src="img/category-1.jpg" alt="catagory 1">
-                </div>
-                <div class="col-3">
-                    <img src="img/category-2.jpg" alt="catagory 2">
-                </div>
-                <div class="col-3">
-                    <img src="img/category-3.jpg" alt="catagory 3">
-                </div>
-
-            </div>
-        </div>
-    </div>
-    <!-- ---------fectured Language------------->
+    <!-- ---------C-programming------------->
     <div class="small-container">
-        <h2 class="title">Featured Language</h2>
-        <div class="row">
-            <div class="col-4">
-                <img src="img/python.jpg" alt="">
-                <h4>Python programming</h4>
-                <p>Bacis to Advanced Journey</p>
-            </div>
-            <div class="col-4">
-                <img src="img/c++.png" alt="">
-                <h4>C++ programming</h4>
-                <p>Bacis to Advanced Journey</p>
-            </div>
-            <div class="col-4">
-                <a href="c-programming.html"><img src="img/c.png" alt=""></a>
-                <h4><a href="c-programming.html">C programming</a></h4>
-                <p>Bacis to Advanced Journey</p>
-            </div>
-            <div class="col-4">
-                <img src="img/java.jfif" alt="">
-                <h4>Java programming</h4>
-                <p>Bacis to Advanced Journey</p>
-            </div>
-        </div>
+        <br>
+        <h2 class="title">C-Programming</h2>
+        <dl class="faq">
+
+            <dt><em>INTERESTING FACTS ABOUT C LANGUAGE</em></dt>
+            <dd>C Language was not called C at the beginning, Then what? ... <a href="" style="color: red;">Learn more</a></dd>
+
+            <dt><em>WHAT IS C?</em></dt>
+            <dd>C is a general-purpose compiled programming language. It was first developed by
+                Dennis Ritchie in the late ‘60s and early ‘70s ... <a href="" style="color: red;">Learn more</a></dd>
+
+            <dt><em>FIRST PROGRAM "HELLO WORLD"</em></dt>
+            <dd>First Confidence Building Program Hello World... <a href="" style="color: red;">Learn more</a></dd>
+
+        </dl>
     </div>
     <!------------- HackerRank Solve -------------->
     <div class="hackerrank">
