--- a/c-programming.html
+++ b/c-programming.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>C Programming CodeHere</title>
+    <title>C Programming CodeHereBro</title>
     <link rel="stylesheet" href="css/c-programming.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -20,7 +20,9 @@
         <nav>
             <ul id="MenuItems">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="">All Posts</a></li>
+                <li><a href="c-programming.html">C Programming</a></li>
+                <li><a href="c-programming.html">C++ Programming</a></li>
+                <li><a href="c-programming.html">Python Programming</a></li>
                 <li><a href="">Contact</a></li>
                 <!-- <li><a href="">Account</a></li> -->
                 <li><a href="">About</a></li>
@@ -40,26 +42,31 @@
                 <a href="" class="btn">Exolore Now &#8594;</a>
             </div>
             <div class="col-2">
-                <img src="img/image1.png" alt="player image">
+                <img src="img/c-png-2.png" alt="player image">
             </div>
         </div>
     </section>
     <!-- ---------C-programming------------->
     <div class="small-container">
-        <br>
-        <h2 class="title">C-Programming</h2>
         <dl class="faq">
+            <br>
+            <h2 class="title">C-Programming</h2>
 
             <dt><em>INTERESTING FACTS ABOUT C LANGUAGE</em></dt>
-            <dd>C Language was not called C at the beginning, Then what? ... <a href="" style="color: red;">Learn more</a></dd>
+            <dd>C Language was not called C at the beginning, Then what? ... <a href="">Learn
+                    more</a></dd>
 
             <dt><em>WHAT IS C?</em></dt>
             <dd>C is a general-purpose compiled programming language. It was first developed by
-                Dennis Ritchie in the late ‘60s and early ‘70s ... <a href="" style="color: red;">Learn more</a></dd>
+                Dennis Ritchie in the late ‘60s and early ‘70s ... <a href="">Learn more</a>
+            </dd>
 
-            <dt><em>FIRST PROGRAM "HELLO WORLD"</em></dt>
-            <dd>First Confidence Building Program Hello World... <a href="" style="color: red;">Learn more</a></dd>
+            <dt><em>FIRST PROGRAM <em>"HELLO WORLD"</em></em>></em></dt>
+            <dd>First Confidence Building Program Hello World... <a href="">Learn more</a></dd>
 
+            <dt><em>INTERESTING FACTS ABOUT C LANGUAGE</em></dt>
+            <dd>C Language was not called C at the beginning, Then what? ... <a href="">Learn
+                    more</a></dd>
         </dl>
     </div>
     <!------------- HackerRank Solve -------------->
