--- a/hackerrank.html
+++ b/hackerrank.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CodeHereBro</title>
-    <link rel="stylesheet" href="css/style.css">
+    <title>HackerRank All Solutions CodeHereBro</title>
+    <link rel="stylesheet" href="css/c-programming.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
@@ -36,9 +36,9 @@
     <section class="nav-bar">
         <div class="row">
             <div class="col-2">
-                <h1>First, solve the problem. Then, write the code.</h1>
-                <p>First learn computer science and all the theory. Next develop a programming style. Then forget
-                    all that and just hack.</p>
+                <h1>Wellcome to C-Programming</h1>
+                <p>Programming isn't about what you know; it's about what you can figure out.<br>Let's Learn c
+                    programming </p>
                 <a href="" class="btn">Exolore Now &#8594;</a>
             </div>
             <div class="col-2">
@@ -46,50 +46,52 @@
             </div>
         </div>
     </section>
-
-    <!-- ---------fectured Catagories------------->
-    <div class="catagories">
-        <div class="small-container">
-            <h1 class="title">Fectured Image</h1>
-            <div class="row">
-                <div class="col-3">
-                    <img src="img/category-1.jpg" alt="catagory 1">
-                </div>
-                <div class="col-3">
-                    <img src="img/category-2.jpg" alt="catagory 2">
-                </div>
-                <div class="col-3">
-                    <img src="img/category-3.jpg" alt="catagory 3">
-                </div>
-
-            </div>
-        </div>
-    </div>
-    <!-- ---------fectured Language------------->
+    <!-- ---------C-programming------------->
     <div class="small-container">
-        <h2 class="title">Featured Language</h2>
-        <div class="row">
-            <div class="col-4">
-                <img src="img/python.jpg" alt="">
-                <h4>Python programming</h4>
-                <p>Bacis to Advanced Journey</p>
-            </div>
-            <div class="col-4">
-                <img src="img/c++.png" alt="">
-                <h4>C++ programming</h4>
-                <p>Bacis to Advanced Journey</p>
-            </div>
-            <div class="col-4">
-                <a href="c-programming.html"><img src="img/c.png" alt=""></a>
-                <h4><a href="c-programming.html">C programming</a></h4>
-                <p>Bacis to Advanced Journey</p>
-            </div>
-            <div class="col-4">
-                <img src="img/java.jfif" alt="">
-                <h4>Java programming</h4>
-                <p>Bacis to Advanced Journey</p>
-            </div>
-        </div>
+        <br>
+        <h2 class="title">C-Programming</h2>
+        <dl class="faq">
+
+            <dt><em>INTERESTING FACTS ABOUT C LANGUAGE</em></dt>
+            <dd>C Language was not called C at the beginning, Then what? ... <button type="button" class="learn-more"><b>Learn more</b></button>
+                <div class="content">
+                    <p>C Language was not called C at the beginning. It has been named as C after passing many stages of evolution. Evolution of C: <br>  ALGO -> BCPL -> B -> Tradition C -> K&R C -> ANSI C -> ANSI/ISO C -> C99.</p>
+                </div>
+            </dd>
+            
+            <dt><em>WHAT IS C?</em></dt>
+            <dd>C is a general-purpose compiled programming language. It was first developed by
+                Dennis Ritchie in the late ‘60s and early ‘70s ... <button type="button" class="learn-more"><b>Learn more</b></button></dd>
+
+            <dt><em>FIRST PROGRAM <em>"HELLO WORLD"</em></em>></em></dt>
+            <dd>First Confidence Building Program Hello World... <button type="button" class="learn-more"><b>Learn more</b></button>
+                <div class="content">
+                    <pre>
+                        #include stdio.h
+                        int main() {
+                           // printf() displays the string inside quotation
+                           printf("Hello, World!");
+                           return 0;
+                        }
+                    </pre>
+                    <p>
+                        How "Hello, World!" program works?
+                        The #include is a preprocessor command that tells the compiler to include the contents of stdio.h (standard input and output) file in the program.
+                        The stdio.h file contains functions such as scanf() and printf() to take input and display output respectively.
+                        If you use the printf() function without writing #include <stdio.h>, the program will not compile.
+                        The execution of a C program starts from the main() function.
+                        printf() is a library function to send formatted output to the screen. In this program, printf() displays Hello, World! text on the screen.
+                        The return 0; statement is the "Exit status" of the program. In simple terms, the program ends with this statement.</p>
+                </div>
+            </dd>
+            
+            <dt><em>INTERESTING FACTS ABOUT C LANGUAGE</em></dt>
+            <dd>C Language was not called C at the beginning, Then what? ... <button type="button" class="learn-more"><b>Learn more</b></button>
+                <div class="content">
+                    <p>C Language was not called C at the beginning. It has been named as C after passing many stages of evolution. Evolution of C: <br>  ALGO -> BCPL -> B -> Tradition C -> K&R C -> ANSI C -> ANSI/ISO C -> C99.</p>
+                </div>
+            </dd>
+        </dl>
     </div>
     <!------------- HackerRank Solve -------------->
     <div class="hackerrank">
