--- a/c-programming.html
+++ b/c-programming.html
@@ -39,7 +39,6 @@
                 <h1>Wellcome to C-Programming</h1>
                 <p>Programming isn't about what you know; it's about what you can figure out.<br>Let's Learn c
                     programming </p>
-                <a href="" class="btn">Exolore Now &#8594;</a>
             </div>
             <div class="col-2">
                 <img src="img/c-png-2.png" alt="player image">
@@ -50,23 +49,55 @@
     <div class="small-container">
         <dl class="faq">
             <br>
-            <h2 class="title">C-Programming</h2>
+            <!-- ----------Basic Introduction--------- -->
+            <h2 class="title">C Introduction</h2>
 
-            <dt><em>INTERESTING FACTS ABOUT C LANGUAGE</em></dt>
-            <dd>C Language was not called C at the beginning, Then what? ... <a href="">Learn
-                    more</a></dd>
+            <dt><em>Interesting facts about C programming</em></dt>
+            <dd>C Language was not called C at the beginning, Then what? ... <a href="">Learn more</a></dd>
 
-            <dt><em>WHAT IS C?</em></dt>
+            <dt><em>What is c?</em></dt>
             <dd>C is a general-purpose compiled programming language. It was first developed by
                 Dennis Ritchie in the late ‘60s and early ‘70s ... <a href="">Learn more</a>
             </dd>
 
-            <dt><em>FIRST PROGRAM <em>"HELLO WORLD"</em></em>></em></dt>
-            <dd>First Confidence Building Program Hello World... <a href="">Learn more</a></dd>
+            <dt><em>C Variables, Constants and Literals</em></dt>
+            <dd>In this tutorial, you will learn about variables and rules for naming a variable...<a href="">learn more</a></dd>
 
-            <dt><em>INTERESTING FACTS ABOUT C LANGUAGE</em></dt>
-            <dd>C Language was not called C at the beginning, Then what? ... <a href="">Learn
-                    more</a></dd>
+            <dt><em>C data type</em></dt>
+            <dd>C-language is rich in its data types, let's learn about data type in c... <a href="">Learn more</a></dd>
+
+            <dt><em>C Input Output</em></dt>
+            <dd>Here, you will learn to use printf() and scanf() function in C programming.... <a href="">learn more</a></dd>
+
+            <dt><em>C operators</em></dt>
+            <dd>Here, you will learn about different operators in C programming.... <a href="">learn more</a></dd>
+
+            <a href="" class="btn" style="color: white;">Let's Practice &#8594;</a>
+        </dl>
+
+        <!-- ----------C Flow Control--------- -->
+        <dl class="faq">
+            <br>
+            <h2 class="title">C Flow Control</h2>
+
+            <dt><em>C if...else Statement</em></dt>
+            <dd>C Language was not called C at the beginning, Then what? ... <a href="">Learn more</a></dd>
+
+            <dt><em>C for Loop</em></dt>
+            <dd>C is a general-purpose compiled programming language. It was first developed by
+                Dennis Ritchie in the late ‘60s and early ‘70s ... <a href="">Learn more</a>
+            </dd>
+
+            <dt><em>C break and continue</em></dt>
+            <dd>In this tutorial, you will learn about variables and rules for naming a variable...<a href="">learn more</a></dd>
+
+            <dt><em>C goto Statement</em></dt>
+            <dd>C-language is rich in its data types, let's learn about data type in c... <a href="">Learn more</a></dd>
+
+            <dt><em>C switch Statement</em></dt>
+            <dd>Here, you will learn to use printf() and scanf() function in C programming.... <a href="">learn more</a></dd>
+
+            <a href="" class="btn" style="color: white;">Let's Practice &#8594;</a>
         </dl>
     </div>
     <!------------- HackerRank Solve -------------->
