c-programming upto array

--- a/c-programming.html
+++ b/c-programming.html
@@ -61,16 +61,16 @@
             </dd>
 
             <dt><em>C Variables, Constants and Literals</em></dt>
-            <dd>In this tutorial, you will learn about variables and rules for naming a variable...<a href="">learn more</a></dd>
+            <dd>here, you will learn about variables and rules for naming a variable...<a href="">learn more</a></dd>
 
             <dt><em>C data type</em></dt>
             <dd>C-language is rich in its data types, let's learn about data type in c... <a href="">Learn more</a></dd>
 
             <dt><em>C Input Output</em></dt>
-            <dd>Here, you will learn to use printf() and scanf() function in C programming.... <a href="">learn more</a></dd>
+            <dd>Here, you will learn to use <strong>printf()</strong> and <strong>scanf()</strong> function in C programming.... <a href="">learn more</a></dd>
 
             <dt><em>C operators</em></dt>
-            <dd>Here, you will learn about different operators in C programming.... <a href="">learn more</a></dd>
+            <dd>Here, you will learn about different <strong>operators in C programming</strong>.... <a href="">learn more</a></dd>
 
             <a href="" class="btn" style="color: white;">Let's Practice &#8594;</a>
         </dl>
@@ -81,21 +81,53 @@
             <h2 class="title">C Flow Control</h2>
 
             <dt><em>C if...else Statement</em></dt>
-            <dd>C Language was not called C at the beginning, Then what? ... <a href="">Learn more</a></dd>
+            <dd>Here, you will learn about <strong>if...else Statement</strong> in C programming... <a href="">Learn more</a></dd>
 
             <dt><em>C for Loop</em></dt>
+            <dd>Here, you will learn about <strong>for loop</strong> in C programming<a href="">Learn more</a></dd>
+
+            <dt><em>C break and continue</em></dt>
+            <dd>Here, you will learn about Break and continue in c programming...<a href="">learn more</a></dd>
+
+            <dt><em>C goto Statement</em></dt>
+            <dd>How to use Goto statement in C programming... <a href="">Learn more</a></dd>
+
+            <dt><em>C switch Statement</em></dt>
+            <dd>Here, you will learn switch statement in C programming.... <a href="">learn more</a></dd>
+
+            <a href="" class="btn" style="color: white;">Let's Practice &#8594;</a>
+        </dl>
+        <dl class="faq">
+            <br>
+            <h2 class="title">C Functions</h2>
+
+            <dt><em>C Programming Functions</em></dt>
+            <dd>C Language was not called C at the beginning, Then what? ... <a href="">Learn more</a></dd>
+
+            <dt><em>C User-defined functions</em></dt>
             <dd>C is a general-purpose compiled programming language. It was first developed by
                 Dennis Ritchie in the late ‘60s and early ‘70s ... <a href="">Learn more</a>
             </dd>
 
-            <dt><em>C break and continue</em></dt>
+            <dt><em>C Functions types</em></dt>
             <dd>In this tutorial, you will learn about variables and rules for naming a variable...<a href="">learn more</a></dd>
 
-            <dt><em>C goto Statement</em></dt>
+            <dt><em>C Recursion</em></dt>
             <dd>C-language is rich in its data types, let's learn about data type in c... <a href="">Learn more</a></dd>
 
-            <dt><em>C switch Statement</em></dt>
-            <dd>Here, you will learn to use printf() and scanf() function in C programming.... <a href="">learn more</a></dd>
+            <a href="" class="btn" style="color: white;">Let's Practice &#8594;</a>
+        </dl>
+        <dl class="faq">
+            <br>
+            <h2 class="title">C Programming Arrays</h2>
+
+            <dt><em>C Arrays</em></dt>
+            <dd>C Language was not called C at the beginning, Then what? ... <a href="">Learn more</a></dd>
+
+            <dt><em>C Multidimensional Arrays</em></dt>
+            <dd>C is a general-purpose compiled programming language. It was first developed by
+                Dennis Ritchie in the late ‘60s and early ‘70s ... <a href="">Learn more</a>
+            </dd>
 
             <a href="" class="btn" style="color: white;">Let's Practice &#8594;</a>
         </dl>
